[Fix] horizontal scroll and styles for privacy policy

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -331,7 +331,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 .innerSubmitGroup {
