--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,24 @@
+/* @import url(./fonts/Bigola-Display-Regular.ttf);
+@import url(./fonts/Gotham-Bold.otf);
+@import url(./fonts/Gotham-Book.otf); */
+@font-face {
+  font-family: 'Bigola';
+  src: url('./fonts/Bigola-Display-Regular.ttf');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Gotham Bold';
+  src: url('./fonts/Gotham-Bold.otf');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Gotham Book';
+  src: url('./fonts/Gotham-Book.otf');
+  font-weight: 400;
+  font-style: normal;
+}
 html,
 body,
 div,
@@ -230,6 +251,17 @@ table {
 
 .contAllCatPosts .postCard {
   height: 40vh;
+}
+
+.containerLegacy{
+  font-family: 'Gotham Book',serif;
+  line-height: 1.3;
+}
+.containerLegacy strong{
+  font-family: 'Gotham Bold',serif;
+  margin: 20px 0;
+  display: block;
+  text-transform: uppercase;
 }
 
 /* .transparent{
